# Core/Server/Sources/Server/Server.swift
@@ -46,8 +46,9 @@ public final class Server: ServerInterface {
         await server.appendRoute("POST /search", to: CORSHandler(wrapping: HandleSearchMock()))
         await server.appendRoute("/scenario", to: CORSHandler(wrapping: HandleScenario()))
         await server.appendRoute("GET /modifiers", to: CORSHandler(wrapping: HandleModifier()))
-        await server.appendRoute("GET /modifiers/*", to: CORSHandler(wrapping: HandleModifier()))
         await server.appendRoute("POST /modifiers", to: CORSHandler(wrapping: HandleModifier()))
+        await server.appendRoute("POST /modifiers/preview", to: CORSHandler(wrapping: HandleModifier()))
+        await server.appendRoute("GET /modifiers/*", to: CORSHandler(wrapping: HandleModifier()))
         await server.appendRoute("PUT /modifiers", to: CORSHandler(wrapping: HandleModifier()))
         await server.appendRoute("PUT /modifiers/*", to: CORSHandler(wrapping: HandleModifier()))
         await server.appendRoute("DELETE /modifiers/*", to: CORSHandler(wrapping: HandleModifier()))
